[gd_scene load_steps=6 format=3 uid="uid://cxroqn4l8kkms"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_5vu6y"]
[ext_resource type="Texture2D" uid="uid://b00h3rpj7w5dk" path="res://Textures/nightmare_bunny.png" id="2_1hh1p"]
[ext_resource type="PackedScene" uid="uid://kkq4d6tpedy7" path="res://Scenes/hurt_box.tscn" id="3_pnbhy"]
[ext_resource type="SpriteFrames" uid="uid://bnvytygy37kib" path="res://Textures/Animations/nightmare_bunny_spawn/nightmare_bunny_spawn.tres" id="4_yky0i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mj8ka"]
size = Vector2(15, 13)

[node name="Enemy" type="Area2D"]
editor_description = "Collision here is for the attack box. It doesn't exist on any layer, but it looks for the Player."
collision_layer = 0
script = ExtResource("1_5vu6y")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_1hh1p")

[node name="HurtBox" parent="." instance=ExtResource("3_pnbhy")]
editor_description = "Exists on layer 2, this is the hurtbox"
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = false
max_health = 3

[node name="AttackBox" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_mj8ka")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("4_yky0i")
animation = &"spawn"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="health_depleted" from="HurtBox" to="." method="_on_hurt_box_health_depleted"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
